@@ -7,6 +7,13 @@ lxml changelog
 Features added
 --------------
 
+* lxml.sax.ElementTreeContentHandler checks closing elements and raises
+  SaxError on mismatch
+
+* lxml.sax.ElementTreeContentHandler now supports namespace-less SAX events
+  (startElement, endElement) and defaults to empty attributes (keyword
+  argument)
+
 * zip_safe flag allows setuptools to install lxml as zipped egg
 
 * Speedup for repeatedly accessing element tag names
